dataLimit dropdown added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
       placeholder="Search By Name"
       onkeyup="filterByName()"
     />
+    <select name="records" id="display-records" onchange="dataLimit()">
+      <option value="select">Select Range</option>
+      <option value="5">5</option>
+      <option value="10">10</option>
+      <option value="15">15</option>
+      <option value="20">20</option>
+      <option value="25">25</option>
+      <option value="30">30</option>
+    </select>
 
     <table border="1">
       <thead>
