added last and first pages buttons removed

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             id="display-records"
             class="form-select"
             onchange="dataLimit()"
+            placeholder="Select Range"
           >
-            <option>Select Range</option>
+            <option value="" disabled selected hidden>Select Range</option>
             <option value="5">5</option>
             <option value="10">10</option>
             <option value="15">15</option>
